<resources>
    <string name="app_name">Lemillion</string>
    <string name="foreground_notification">App is running in background</string>
    <string name="torrent">Torrent</string>
    <string name="file">File</string>
    <string name="starting_engine">Starting Engine</string>
    <string name="successful">Successful</string>
    <string name="unable_to_start_engine">Torrent engine start failed</string>
    <string name="engine_stopped">Engine Stopped</string>
    <string name="loading">Loading</string>
    <string name="unable_to_load_torrent">Unable to load torrent</string>
    <string name="add_torrent">Add Torrent</string>
    <string name="add_magnet">Add Magnet</string>
    <string name="add_link">Add Link</string>
    <string name="magnet_link">Magnet Link</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="unable_to_parse_magnet">Unable to parse magnet.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_files">Remove</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="recheck">Recheck</string>
    <string name="delete_with_files">Remove with downloaded files?</string>
    <string name="failed_to_remove_torrent">Failed to remove torrent.</string>
    <string name="unable_to_add_magnet">Unable to add magnet</string>
    <string name="unable_to_add_torrent_file">Unable to add torrent file.</string>
    <string name="_unable_to_parse_file">Unable to parse file.</string>
    <string name="error">Error</string>
    <string name="name">Name</string>
    <string name="hash">hash</string>
    <string name="path">Path</string>
    <string name="not_torrent_file_extension">Not a torrent file.</string>
    <string name="done">Done</string>
    <string name="select_none">Select none</string>
    <string name="files">Files</string>
    <string name="empty">Empty</string>
    <string name="no_meta_data">Metadata not found.</string>
    <string name="download_metadata">Download meta</string>
    <string name="downloading">Downloading</string>
    <string name="info">Info</string>
    <string name="pieces">Pieces</string>
    <string name="size">Size</string>
    <string name="canceled">Canceled</string>
    <string name="completed">Completed</string>
    <string name="failed">Failed</string>
    <string name="unknown">Unknown</string>
    <string name="paused">Paused</string>
    <string name="connecting">Connecting</string>
    <string name="waiting">Waiting</string>
    <string name="checking">Checking</string>
    <string name="file_composer">File Composer</string>
    <string name="torrent_composer">Torrent Composer</string>
    <string name="downloading_meta">Downloading meta</string>
    <string name="input_url">Input Url</string>
    <string name="download">Download</string>
    <string name="rename_file">Rename file</string>
    <string name="change_path">Change Path</string>
    <string name="delete_task">Delete task</string>
    <string name="task_exists">Task exists</string>
    <string name="file_exists">File exists</string>
    <string name="task_exists_please_change_the_file_name_or_path_and_continue">task exists please change the file name or path and continue</string>
    <string name="unresolved_issues">Please resolve the issue first.</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="task_with_same_url_exists">Task with same url exists.</string>
    <string name="http_not_found">HTTP NOT FOUND</string>
    <string name="please_wait_collecting_data">Please wait collecting data</string>
    <string name="task_completed">Task Completed</string>
    <string name="search">Search</string>
    <string name="resume_all">Resume all</string>
    <string name="pause_all">Pause all</string>
    <string name="settings">Setting</string>
    <string name="sort">Sort</string>
    <string name="exit">Exit</string>
    <string name="please_wait">Please wait</string>
    <string name="dark_theme">Dark</string>
    <string name="storage_path">Default storage path</string>
    <string name="choose_a_folder">Choose a folder</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="invalid_url">Invalid url</string>
    <string name="general">General</string>
    <string name="unsupported_url">Unsupported url</string>
    <string name="speed">Speed</string>
    <string name="seeders_leechers">Seeders(S) / Leechers(L)</string>
    <string name="peers">Peers</string>
    <string name="url">Url</string>
    <string name="downloading_meta_failed">Failed</string>
    <string name="engine_stopping">Engine Stopping</string>
    <string name="meta">Meta</string>
    <string name="added">Added</string>
    <string name="created">Created</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloaded_uploaded">Downloaded/Uploaded</string>
    <string name="eta">Eta</string>
    <string name="tracker">Tracker</string>
    <string name="peer">Peer</string>
    <string name="unknown_scheme">Unknown Scheme</string>
    <string name="restart">Restart</string>
    <string name="unsupported_format">Unsupported format</string>
    <string name="size_free">Size: Free %s</string>
    <string name="percent_s">%.1f%%</string>
    <string name="service_title_format">Torrent %d | File %d</string>
    <string name="free">Free</string>
    <string name="low_space">Low space</string>
    <string name="reannounce">Reannounce</string>
    <string name="speed_limit">Speed limit</string>
    <string name="add_tracker">Add tracker</string>
    <string name="upload_speed">Upload Speed</string>
    <string name="download_speed">Download Speed</string>
    <string name="add_trackers">Add trackers</string>
    <string name="add_space_between_trackers">Add space between trackers</string>
    <string name="speed_limit_size_format">Speed limit (KB)</string>
    <string name="download_speed_kb">Download speed (Kb)</string>
    <string name="upload_speed_kb">Upload speed (Kb)</string>
    <string name="invalid_number_format">Invalid number format</string>
    <string name="torrent_name">Torrent name</string>
    <string name="about">About</string>
    <string name="about_lemillion">Lemillion is downloader supporting both torrent and file downloader. It is inspired from Free Download Manager with the hope
    of bringing features that FDM supports and much more.</string>
    <string name="beta">Beta</string>
    <string name="agreement">By using this app, you agree that rev0lgenX is not responsible for what you distribute using this app.</string>
    <string name="general_information">General Information</string>
    <string name="version">Version %s</string>
    <string name="additional_info">Additional Information</string>
    <string name="change_log">Change logs</string>
    <string name="legal_information">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal">Legal</string>
    <string name="libtorrent4j_license">Libtorrent4j</string>
    <string name="aria_license">Aria</string>
    <string name="license">License</string>
    <string name="reports">Reports</string>
    <string name="send_report">Send reports</string>
    <string name="send_crash_report">Send crash reports and statistics. No personal data will be collected.</string>
    <string name="help_translation">Help in translation</string>


    <string-array name="sort_array">
        <item>Name Asc</item>
        <item>Name Desc</item>
        <item>Size Asc</item>
        <item>Size Desc</item>
        <item>Progress Asc</item>
        <item>Progress Desc</item>
        <item>Date Asc</item>
        <item>Date Desc</item>
    </string-array>
</resources>
