<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search_menu"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/resume_all_menu"
        android:title="@string/resume_all"
        app:showAsAction="never"
        android:icon="@drawable/ic_play"
        />

    <item
        android:id="@+id/pause_all_menu"
        android:title="@string/pause_all"
        app:showAsAction="never"
        android:icon="@drawable/ic_pause"/>

    <item
        android:id="@+id/sort_menu"
        android:title="@string/sort"
        app:showAsAction="never"
        android:icon="@drawable/ic_sort"/>

    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_setting"/>

    <item
        android:id="@+id/about_menu"
        android:title="@string/about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never"
        android:icon="@drawable/ic_exit"/>

</menu>