<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/generalViewTv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="center"
                    android:text="@string/general"
                    android:textColor="?android:textColorPrimary" />

                <TextView
                    android:id="@+id/piecesViewTv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="center"
                    android:text="@string/pieces"
                    android:textColor="?android:textColorPrimary" />

                <TextView
                    android:id="@+id/filesViewTv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="center"
                    android:text="@string/files"
                    android:textColor="?android:textColorPrimary" />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/torrentGeneralLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.revolgenx.lemillion.view.TitleTextView
                android:id="@+id/torrentNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleName="@string/name" />

            <com.revolgenx.lemillion.view.TitleTextView
                android:id="@+id/torrentHashTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:descriptionDrawable="@drawable/ic_copy"
                app:showDrawable="true"
                app:titleName="@string/hash" />

            <com.revolgenx.lemillion.view.TitleTextView
                android:id="@+id/torrentPathTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleName="@string/path" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/torrentPiecesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.revolgenx.lemillion.view.TitleTextView
                android:id="@+id/torrentPiecesTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleName="@string/pieces" />

            <com.revolgenx.lemillion.view.PiecesView
                android:layout_width="match_parent"
                android:layout_height="500dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/torrentFilesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/ic_play" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
